Adds 6 new beds

--- a/[DGA] StarAmys Cozy Rustic Furniture/i18n/default.json
+++ b/[DGA] StarAmys Cozy Rustic Furniture/i18n/default.json
@@ -21,4 +21,16 @@
   "furniture.Natural Wood Table.description": "Made from warm natural wood.",
   "furniture.Wood Stove.name": "Wood Stove",
   "furniture.Wood Stove.description": "Keep your cabin nice and warm.",
+  "furniture.Cozy Red Bed.name": "Cozy Red Bed",
+  "furniture.Cozy Red Bed.description": "A perfect place to curl up.",
+  "furniture.Cozy Brown Bed.name": "Cozy Brown Bed",
+  "furniture.Cozy Red Brown.description": "A perfect place to curl up.",
+  "furniture.Cozy Grey Bed.name": "Cozy Grey Bed",
+  "furniture.Cozy Grey Bed.description": "A perfect place to curl up.",
+  "furniture.Single Cozy Red Bed.name": "Single Cozy Red Bed",
+  "furniture.Single Cozy Red Bed.description": "A perfect place to curl up.",
+  "furniture.Single Cozy Brown Bed.name": "Single Cozy Brown Bed",
+  "furniture.Single Cozy Red Brown.description": "A perfect place to curl up.",
+  "furniture.Single Cozy Grey Bed.name": "Single Cozy Grey Bed",
+  "furniture.Single Cozy Grey Bed.description": "A perfect place to curl up.",
 }
