--- a/[DGA] StarAmys Cozy Rustic Furniture/i18n/default.json
+++ b/[DGA] StarAmys Cozy Rustic Furniture/i18n/default.json
@@ -33,4 +33,8 @@
   "furniture.Single Cozy Red Brown.description": "A perfect place to curl up.",
   "furniture.Single Cozy Grey Bed.name": "Single Cozy Grey Bed",
   "furniture.Single Cozy Grey Bed.description": "A perfect place to curl up.",
+  "furniture.Stone Hearth.name": "Stone Hearth",
+  "furniture.Stone Hearth.description": "Keep a toasty home.",
+   "furniture.Cozy Stone Hearth.name": "Cozy Stone Hearth",
+  "furniture.Cozy Stone Hearth.description": "Keep a toasty home.",
 }
